# payments-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: api.py  auth.py  broker.py  config.py  consumer.py  db.py  main.py  models.py  outbox.py  repository.py  schemas.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_api.py  test_outbox.py  test_webhook.py
